# analyst

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHARTER.md  CLAUDE.md  CONTRACT.md  Dockerfile  Makefile  README.md  docker-compose.dbs.yml  docker-compose.yml  pyproject.toml  run-acceptance-tests.sh
.analyst-data/: titanic.v1.parquet
.engineer/: inbox.md  manifest.yml  roadmap.md
.engineer/fixes/: 2026-07-08-trust-trail-collapse.md  2026-07-15-profiler-alias-collision.md  2026-07-18-curation-500-transient-sdk.md
.engineer/handoffs/: 2026-07-01T1254-onboard.md  2026-07-02T1020-post-merge.md  2026-07-15-autonomous-session-summary.md  2026-07-18-autonomous-session-summary.md
.github/workflows/: ci.yml  docker.yml  nightly.yml  pages.yml  tutorial-images.yml  tutorial-smoke.yml
acceptance/: __init__.py  ctx010.py  ctx011.py  ctx017.py  e2e_003.py  e2e_004.py  e2e_005.py  e2e_006.py  e2e_007.py  e2e_009.py  e2e_012.py  e2e_013.py  e2e_014.py  e2e_015.py  e2e_016.py  e2e_018.py  e2e_019.py  e2e_base.py  e2e_handlers.py  fixtures.py  fixtures_qa.py  generator.py  golden.py  handlers.py  join009.py
docs/: DEPLOYMENT-HARDENING.md  PARALLEL_PLAN.md  PRD.md  agent.json  golden-corpus.md  wireframe_implementation_plan.md
docs/research/: 01-sota-atdd-agentic.md  02-trusted-source-network.md  03-developments-apr-jul-2026.md  04-keeping-agents-honest-landscape.md  05-controls-decision.md  06-intent-vs-spec.md  README.md  references.md
docs/site/: _config.yml  admin.md  ask.md  getting-started.md  index.md  ingest.md  models.md
features/001-file-ingestion-and-profiling/: acs.md  feature.md  plan.md  runbook.md  spec.md
features/001-file-ingestion-and-profiling/handoffs/: 2026-07-01T1259-feature-init.md  2026-07-01T1313-discover-acs.md  2026-07-01T1320-atdd.md  2026-07-01T1329-plan.md
features/002-api-and-frontend/: .handlers  acs.md  feature.md  plan.md  spec.md
features/003-nl-qa/: .handlers  DESIGN.md  acs.md  feature.md  plan.md  spec.md
features/004-auth-workspaces/: .handlers  acs.md  feature.md  plan.md  runbook.md  spec.md
features/005-db-federation/: .handlers  acs.md  feature.md  plan.md  runbook.md  spec.md
features/006-data-workbench-ux/: .handlers  acs.md  feature.md  plan.md  spec.md
features/007-within-db-qa/: .handlers  acs.md  feature.md  spec.md
features/008-files-x-db-qa/: feature.md
features/009-semantic-depth/: .handlers  acs.md  feature.md  plan.md  spec.md
features/010-workspace-aware-cataloguing/: .handlers  acs.md  feature.md  plan.md  spec.md
features/011-credential-storage/: .handlers  acs.md  feature.md  plan.md  runbook.md  spec.md
features/012-guided-predictive-models/: .handlers  acs.md  feature.md  plan.md  spec.md
features/013-data-normalization-detection/: .handlers  acs.md  feature.md  plan.md  spec.md
features/014-charts-and-exports/: .handlers  acs.md  feature.md  plan.md  spec.md
features/015-dashboards/: .handlers  acs.md  feature.md  plan.md  spec.md
features/016-catalog-curation/: .handlers  acs.md  feature.md  plan.md  spec.md
features/017-cross-database-joins/: .handlers  acs.md  feature.md  plan.md  spec.md
features/018-relational-graph-models/: .handlers  acs.md  feature.md  plan.md  spec.md
features/019-guided-graph-authoring/: .handlers  acs.md  feature.md  plan.md  spec.md
frontend/: Makefile  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts  (+1 more)
scripts/: capture_screenshots.py  dbs_up.sh  explore.sh  make_cross_dbs.py  record_cross_db_cassette.py  record_curation_cassette.py  record_dashboards_cassette.py  record_graph_authoring_cassette.py  record_models_cassette.py  record_models_container_cassette.py  seed_berka_db.py  seed_sqlite_to_postgres.py  summarize_defects.py
src/analyst/: __init__.py
tests/cassettes/: catalog_context.json  catalog_orders.json  cataloguer.json  cross_db_planner.json  curation.json  curation_planner.json  dashboards.json  graph_authoring.json  ingest_ambiguous.json  ingest_orders.json  join_planner.json  models_guidance.json  planner.json
tests/golden/: chinook.sqlite  ground_truth.json  make_chinook.py
tests/live/: test_credential_reconnect.py  test_federation_dbs.py
tests/unit/: test_agentic.py  test_api.py  test_auth_api.py  test_charts.py  test_connection_domain.py  test_credentials.py  test_curation.py  test_dashboards.py  test_databases_api.py  test_enrich.py  test_federated_query.py  test_federation.py  test_formats.py  test_graphauthoring.py  test_ingestion.py  test_mltrain.py  test_normalization.py  test_persistence.py  test_planner.py  test_profiler.py  test_qa_service.py  test_query_validation.py  test_reader.py  test_relationships.py  test_relgraph.py  test_sql_guard.py  test_workspace_context.py
tutorial/: Makefile  PLAN.md  check_labels.py  docker-compose.yml  make_linked_pair.py  smoke.sh
tutorial/data/: alias_test.csv  ambiguous_shipments.csv  big_inventory.csv  billing.db  crm.db  employees.csv  messy_orders.csv  messy_orders_v2.csv  messy_sales.csv  monthly_revenue.csv  orders.csv
tutorial/files/: company.xlsx  customers.csv  purchases.csv
tutorial/pages/: 01-first-data.md  01-ingest.md  02-ask.md  02-databases.md  03-ask.md  03-databases.md  04-models.md  05-relational.md  index.md  key.md
(+161 files in other folders)
