[project]
name = "analyst"
version = "0.1.0"
readme = "README.md"
description = "Self-hosted AI data analyst: agentic ingestion, profiling, semantic catalog, and NL Q&A."
authors = [
    { name = "FreeSideNomad", email = "freesidenomad@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
files = ["src/analyst"]
warn_redundant_casts = true
warn_unused_ignores = true
