[project]
name = "analyst"
version = "0.1.0"
readme = "README.md"
description = "Self-hosted AI data analyst: agentic ingestion, profiling, semantic catalog, and NL Q&A."
authors = [
    { name = "FreeSideNomad", email = "freesidenomad@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.115.0",
    "claude-agent-sdk>=0.2.110",
    "cryptography>=49.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
# Heavy source-DB drivers for federation (feature 005). Optional so default
# `uv sync` stays lean; live Docker tests install with `uv sync --extra dbs`.
dbs = [
    "pymssql>=2.3.0",
    "ibm-db>=3.2.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "playwright>=1.61.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
files = ["src/analyst"]
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "claude_agent_sdk.*", "xlrd.*", "pymssql", "ibm_db_dbi"]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "live: hits the real Claude subscription to (re)record cassettes; deselected by default",
]
addopts = "-m 'not live'"
