[project]
name = "analyst"
version = "0.1.0"
readme = "README.md"
description = "Self-hosted AI data analyst: agentic ingestion, profiling, semantic catalog, and NL Q&A."
authors = [
    { name = "FreeSideNomad", email = "freesidenomad@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.115.0",
    "claude-agent-sdk>=0.2.110",
    "cryptography>=49.0.0",
    "duckdb>=1.5.4",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "lightgbm>=4.7.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "python-multipart>=0.0.9",
    "pytz>=2024.1",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.2",
]

[project.optional-dependencies]
# Heavy source-DB drivers for federation (feature 005). Optional so default
# `uv sync` stays lean; live Docker tests install with `uv sync --extra dbs`.
dbs = [
    "pymssql>=2.3.0",
    "ibm-db>=3.2.0",
]
# The relational-graph (GNN) tier — feature 018. Optional so the default
# image stays lean; the analyst:ml image variant and local ML dev install
# with `uv sync --extra ml`. CPU torch only.
ml = [
    "torch>=2.12,<2.13",  # newest torch with pyg-lib wheels (cp314)
    "torch-geometric>=2.8.0",
    # Native neighbor sampler from the PyG flat index; the local-version
    # variants split by platform (+pt212 = macOS arm64, +pt212cpu = linux/win).
    "pyg-lib==0.7.0+pt212; sys_platform == 'darwin'",
    "pyg-lib==0.7.0+pt212cpu; sys_platform != 'darwin'",
    "pytorch-frame>=0.3.0",
    "relbench==1.1.0",  # the paper's exact version (reproduction fidelity)
    "pyyaml>=6.0",
]

[tool.uv.sources]
pyg-lib = { index = "pyg" }

[[tool.uv.index]]
name = "pyg"
url = "https://data.pyg.org/whl/torch-2.12.0+cpu.html"
format = "flat"
explicit = true

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "playwright>=1.61.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.14"
files = ["src/analyst"]
warn_redundant_casts = true

# The ML stack ships no stubs; the trainer is exhaustively unit-tested
# against real data instead (feature 012).
[[tool.mypy.overrides]]
module = ["sklearn.*", "lightgbm.*", "pandas.*"]
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["openpyxl.*", "claude_agent_sdk.*", "xlrd.*", "pymssql", "ibm_db_dbi"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The optional ml extra (feature 018) — not installed in every dev env.
module = ["torch.*", "torch_geometric.*", "torch_frame.*", "relbench.*", "yaml"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Vendored engine: kept faithful to the paper (reproduction gate) rather
# than annotated to analyst's strictness.
module = ["analyst.engine.relgraph.*"]
ignore_errors = true

[tool.pytest.ini_options]
markers = [
    "live: hits the real Claude subscription to (re)record cassettes; deselected by default",
]
addopts = "-m 'not live'"
